--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -112,4 +112,17 @@
   margin-left: 20px;
   font-size: 25px;
 }
+.menu__item:hover {
+  cursor: pointer;
+}
 
+
+.cardts__item {
+  margin-top: 30px;
+  padding: 50px 300px;
+  background-color: #D3D3D3;
+}
+.person__item {
+  font-size: 20px;
+  margin-top: 15px;
+}
