getting articles from the server

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -16,7 +16,7 @@
   text-align: center;
 }
 .article__footer {
-  text-align: left;
+  text-align: center;
   padding-top: 10px;
 }
 .article__footer > .btn {
